refactor(contents): 스트림 컬렉션 변환 수정